# ss-local

./: .gitignore  Cargo.toml  README.md  config  log4rs.yml  rustfmt.toml  ss-local.service  关于中国的互联网.txt
src/: config.json  config.rs  conn.rs  err.rs  leakybuf.rs  lib.rs  main.rs  net.rs  rccell.rs  service.rs  shut.rs  socks5.rs  trans.rs
src/acl/: acl.rs
src/crypto/: aead.rs  cipher.rs  crypto2.rs  mod.rs  ring.rs  sodium.rs
src/fc/: acl.rs  mod.rs
src/files/: config.json  firewalld.rules.txt  gfwlist-banAD.acl  log4rs.yml
src/tcprelay/: buf.rs  copy_into.rs  crypto_io.rs  mod.rs  socks5.rs
