[package]
name = "shadowsock-local"
version = "0.1.0"
authors = ["simacuo <noemail@anybox.com>"]
edition = "2018"

[lib]
name = "shadowsocks"

[[bin]]
name = "ss-local"
path = "src/bin/ss-local.rs"

[dependencies]
log = "0.4"
log4rs = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ring = "0.14"
rand = "0.6"
openssl = "0.10"
bytes = "0.4"
sodiumoxide = "^0.2.1"
romio = "0.3.0-alpha.2"
byteorder = "1.3"
byte_string = "1.0.0"
clap = "2.32.0"

[target.'cfg(windows)'.dependencies]
pcre2  = "0.1.1"
fnv = "1.0.6"
parking_lot = "0.7.1"
ipnet = "2.0.0"


[dependencies.futures]
version = "0.3.0-alpha.13"
package = "futures-preview"



