[package]
name = "shadowsock-local"
version = "0.1.4"
authors = ["simacuo <noemail@anybox.com>"]
edition = "2018"

[lib]
name = "shadowsocks"

[[bin]]
name = "ss-local"
path = "src/bin/ss-local.rs"

[dependencies]
log = "0.4"
log4rs = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6"
bytes = "0.4"
sodiumoxide = "^0.2.1"
smol = "~1.2.4"
futures = "~0.3.12"
byteorder = "1.3"
byte_string = "1.0.0"
clap = "2.32.0"
crypto2 = {version = "~0.1", optional = true}
ring = {version = "~0.16.20", optional = true}

[target.'cfg(windows)'.dependencies]
pcre2  = "0.1.1"
fnv = "1.0.6"
parking_lot = "0.7.1"
ipnet = "2.0.0"

[features]
default = ["cipher-crypto2"]
cipher-crypto2 = ["crypto2"]
cipher-ring = ["ring"]

[profile.release]
lto = true
incremental = false


